Communication Added and Bug Fixes
Was able to communicate effectively with the device and change logic. Need to integrate file read into the system.

--- a/Collision/Collision.ioc
+++ b/Collision/Collision.ioc
@@ -53,9 +53,9 @@ PC0.Signal=I2C3_SCL
 PC1.Locked=true
 PC1.Signal=I2C3_SDA
 PD0.Locked=true
-PD0.Signal=GPIO_Input
+PD0.Signal=GPIO_Output
 PD1.Locked=true
-PD1.Signal=GPIO_Input
+PD1.Signal=GPIO_Output
 PD5.Locked=true
 PD5.Signal=USART2_TX
 PD6.Locked=true
